# Gaia

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
data/: sample_backtest.csv
src/: backtest.py  config.py  download_data.py  main.py  train_ai.py
src/connectors/: kraken_futures_rest.py  kraken_ws.py  telegram.py
src/core/: broker.py  control.py  inference.py  logger.py  models.py  persistence.py  recorder.py  recovery.py  risk.py  strategy.py  watchdog.py
src/strategies/: reverse_pattern.py
tests/: test_backtest_runner.py  test_bracket_orders.py  test_inference.py  test_infra.py  test_kraken_rest_signing.py  test_kraken_ws_mock.py  test_panic.py  test_persistence.py  test_recorder.py  test_recovery.py  test_reverse_pattern.py  test_risk_manager.py  test_strategy_engine.py  test_telegram.py  test_watchdog.py
